# E.C.

./: BioInsp_Abejas.ipynb  Bio_inspirado.ipynb
ACM_RUSSBEL/: COMO_INSTALAR.txt  INSTRUCCIONES_INSTALACION.md  README.md  app.py  dependencies.txt  install.py  install_requirements.txt  pyproject.toml  requirements_project.txt  verificar_instalacion.py
ACM_RUSSBEL/static/css/: style.css
ACM_RUSSBEL/static/data/: ejemplo_acm.csv
ACM_RUSSBEL/templates/: acm_tool.html  base.html  configure_acm.html  index.html  results.html
ACM_RUSSBEL/uploads/: PruebaACM.xlsx  PruebaACM3.xlsx
Aplicación_Shiny/: APP_Shiny.R
Creacion_Librería/: DESCRIPTION
Creacion_Librería/Num_Aleatorios/: app.R
Creacion_Librería/Num_Aleatorios/rsconnect/shinyapps.io/russbel/: Num_Aleatorios.dcf
Creacion_Librería/R/: Comp-Mtds.R  gasto_mensual.R  notas.R  tallas.R  temperaturas.R
Creacion_Librería/man/: generar_gasto_mensual.Rd  generar_notas.Rd  generar_tallas.Rd  generar_temperaturas.Rd
Juego_Caramelos/: README.txt  app_simple.py  main.py
Juego_Caramelos/templates/: base_simple.html  game_simple.html  index_simple.html  phase2_simple.html  results_simple.html
PAPER_ARTICULO/: delitos-denunciados-2023_0.csv  modelo_probabilistico_generativo.py  predicciones_modificadas.csv
